/*
 * $Id: ChangeLog,v 1.5559 2007/05/24 17:01:00 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-24 16:05 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/fm.c
  * source/compiler/harbour.c
    * Compiler warnings
    
2007-05-24 13:00 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/pcre/config.h
    * Disable warning guarded by defined( _MSC_VER )

 /* Please add equivalent for your C compiler */

2007-05-24 18:23 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * source/rdd/bmdbfcdx/bmdbfcdx1.c
    * removed unnecesary code
    ! fixed bug on SKIP with SET DELETED ON when skips a deleted recno, OrdKeyNo was wrong.
  * source/rdd/dbfcdx/dbfcdx1.c
    * removed unnecesary code
  * source/rdd/wafunc.c
    * minor changes.

2007-05-24 12:01 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbcomp.h
  * include/hbinit.h
  * source/compiler/genc.c
  * source/compiler/genjava.c
  * source/compiler/genobj32.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/ct/atadjust.c
  * source/ct/count.c
  * source/ct/ctpad.c
  * source/ct/justify.c
  * source/ct/pos2.c
  * source/ct/range.c
  * source/ct/remove.c
  * source/ct/replace.c
  * source/odbc/odbc.c
  * source/rdd/dbffpt/dbffpt1.c
  * source/rtl/gtgraph.c
  * source/rtl/gtwvt/gtwvt.c
    * Compiler warnings

2007-05-24 08:37 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/eval.c
    * Silly typo in my recent fix to HB_Exec()

2007-05-24 10:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/hbgtwvw.h
  * contrib/gtwvw/gtwvw.c
    ! Fix wrong handling of HB_ITEM causing memory leak, for the following functions:
      HB_FUNC( WVW_CLIENTTOSCREEN )
      HB_FUNC( WVW_GETXYFROMROWCOL )
      HB_FUNC( WVW_GETROWCOLFROMXY )
      HB_FUNC( WVW_GETFONTINFO )