@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5559 2007/05/24 17:01:00 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5560 2007/05/24 20:15:00 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-05-24 23:04 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
+  * source/compiler/harbour.c
+    * Removed two redundant assignments in function hb_compCompile()
 
 2007-05-24 16:05 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * source/vm/fm.c
